(tests
 (names ppx)
 (libraries
   alcotest
   mazout.ppx_deriving
   mazout_runtime
   caqti
   caqti.blocking
   caqti-driver-sqlite3
   uri
   lens)
 (preprocess
   (pps
     mazout.ppx_deriving
     ppx_deriving.show
     ppx_deriving.make
     ppx_fields_conv
     lens.ppx_deriving))
 (action
   (run %{test} -e)))
